[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"
authors = ["Chris Paterson <chris@chrispaterson.co.uk>"]
description = "Advent of Code 2025 solutions in Rust"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ThePants999/advent-of-code-2025"

[dependencies]
advent_of_code_rust_runner = { path = "../advent-of-code-rust-runner" }
env_logger = "0.11"
log = "0.4"
