[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"
authors = ["Chris Paterson <chris@chrispaterson.co.uk>"]
description = "Advent of Code 2025 solutions in Rust"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ThePants999/advent-of-code-2025"

[dependencies]
advent-of-code-rust-runner = "0.2"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"